<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IPTV MKD</string>

    <string name="action_settings">Поставки</string>

    <string name="dialog_button_cancel">Откажи</string>
    <string name="puco">од PUCO</string>
    <string name="iTV">Продолжи кон каналите</string>
    <string name="title_activity_actkv">actkv</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="registerTitle">Регистрација</string>
    <string name="guest">Гостин</string>
    <string name="logout">Одјави се</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btnRegister">Регистрирај се</string>
    <string name="hintPassword">Лозинка</string>
    <string name="kontakt">КОНТАКТ/ПРОБЛЕМ</string>
    <string name="info">ИНФО</string>
    <string name="infotext">ДОБРЕДОЈДОВТЕ НА IPTV MKD од PUCO !</string>
    <string name="dialog_core_not_installed_message">Ве молиме инсталирајте \"IPTV Core\" од Google Play</string>
    <string name="kontakttext">IPTV MKD КОНТАКТ</string>
    <string name="dialog_core_not_installed_title">IPTV Core треба да го инсталирате</string>
    <string name="dialog_button_install">Инсталирај</string>
    <string name="kontakttext3">Исто така ако сакате да ја додадете вашата телевизија на нашата апликација контактирајте не на истиот е-маил со податоци за вашата телевизија како и доделена IP од телевизијата.</string>
    <string name="next">Следно</string>
    <string name="previous">Назад</string>
    <string name="btnLogin">Најави се</string>
    <string name="loginTitlle">Најави се</string>
    <string name="infotext2">Нашата апликација овозможува гледање на каналите бесплатно!</string>
    <string name="infotext3">Наскоро и PRO верзија на истата во која нема да има реклами!</string>
    <string name="kontakttext2">Контакт е-маил: <b><i>rstevanovskii@gmail.com</i></b></string>
    <string name="kontakttext1">За било каков проблем во врска со некој канал или проблем со апликацијата багови и слично ве молиме да не известите на нашата емаил адреса која е наведена!</string>
    <string name="hintEmail">Е-маил</string>
    <string name="infotext1">Ви благодариме што ја спуштивте нашата апликација уживајте во гледањето на каналите!</string>
    <string name="loginBtnInRegister">Најави се</string>
    <string name="registerBtnInRegister">Регистрирај се!</string>
    <string name="registerTitleInRegister">Регистрација</string>


    <string name="facebook_app_id">1365727297263189</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">da62d7f779a1be02afe7b784d8775d29</string>



</resources>
