<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/pozadina"
    android:layout_height="match_parent"
    tools:context=".WlcmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/puco"
            android:textColor="@color/bela" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:layout_marginBottom="-100dp"
            android:src="@drawable/logo1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/info"
                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="INFOKLIK"
                android:text="@string/info" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/support"
                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="Kontakt"
                android:text="@string/kontakt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/kontakttextlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/kontakttext"
                android:textColor="@color/bela"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/kontakttext1"
                android:textColor="@color/bela"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/kontakttext2"
                android:textColor="@color/bela"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/kontakttext3"
                android:textColor="@color/bela"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/infotextlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/infotext"
                android:textColor="@color/bela"
                android:textSize="27dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/infotext1"
                android:textColor="@color/bela"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/infotext2"
                android:textColor="@color/bela"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/infotext3"
                android:textColor="@color/bela"
                android:textSize="20dp" />

        </LinearLayout>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="IPTV"
            android:text="@string/iTV" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_delete"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/logout" />
    </LinearLayout>
</RelativeLayout>