<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity"
    android:background="@drawable/pozadina">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="70px"
            android:textAllCaps="true"
            android:text="@string/loginTitlle" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/bela" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/bela" />

        <Button
            android:id="@+id/signin_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:text="@string/btnLogin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">


            <Button
                android:id="@+id/googleLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/googleicon"
                android:text="Google" />

            <Button
                android:id="@+id/anonyLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest" />

            <Button
                android:id="@+id/buttonReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:text="@string/btnRegister" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1"
        tools:layout_editor_absoluteX="25dp" />

    <Button
        android:id="@+id/eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableStart="@drawable/mkd"
        android:text="MKD"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/mkd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:layout_weight="1"
        android:drawableStart="@drawable/eng"
        android:text="ENG"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/eng" />

</androidx.constraintlayout.widget.ConstraintLayout>